# xeus-nelson-kernel

./: .gitignore  .prettierignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  RELEASE.md  copy_output.sh  environment.yml  install.json  package.json  pyproject.toml  setup.py  webpack.config.js
.github/workflows/: build.yml  check-release.yml  rtd-preview.yml
docs/: build-environment.yml  conf.py  configuration.rst  deploy.rst  index.rst  installation.rst
jupyterlite_xeus_nelson/: __init__.py  build.py  env_build_addon.py
src/: declarations.d.ts  index.ts
