[build-system]
requires = [
    "hatchling",
    "jupyterlab~=3.1",
    "empack>=2.0.9,<3",
    "hatch-nodejs-version",
]
build-backend = "hatchling.build"

[project]
name = "jupyterlite-xeus-nelson"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Framework :: Jupyter",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "empack>=2.0.9,<3",
    "jupyterlite-core>=0.1.0b20",
    "requests",
    "traitlets",
    "typer",
]
dynamic = ["version", "description", "authors", "urls", "keywords"]

[tool.hatch.version]
source = "nodejs"

[tool.hatch.build.hooks.version]
path = "jupyterlite_xeus_nelson/_version.py"

[tool.hatch.build]
artifacts = [
    "jupyterlite_xeus_nelson/labextension",
]

[tool.hatch.build.targets.wheel.shared-data]
"jupyterlite_xeus_nelson/labextension" = "share/jupyter/labextensions/@jupyterlite/xeus-nelson-kernel"
"install.json" = "share/jupyter/labextensions/@jupyterlite/xeus-nelson-kernel/install.json"

[tool.hatch.build.targets.sdist]
exclude = [
    ".github",
]

[tool.hatch.build.hooks.jupyter-builder]
dependencies = [
    "hatch-jupyter-builder>=0.8.2",
]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "jupyterlite_xeus_nelson/labextension/static/style.js",
    "jupyterlite_xeus_nelson/labextension/package.json",
]
skip-if-exists = [
    "jupyterlite_xeus_nelson/labextension/static/style.js",
]

[tool.hatch.build.hooks.jupyter-builder.editable-build-kwargs]
build_dir = "jupyterlite_xeus_nelson/labextension"
source_dir = "src"
build_cmd = "build:prod"
npm = [
    "jlpm",
]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
build_cmd = "build:prod"
npm = [
    "jlpm",
]

[tool.jupyter-releaser.hooks]
before-build-npm = [
    "python -m pip install jupyterlab~=3.1 empack~=2.0 hatch",
    "jlpm",
    "jlpm build:prod",
]
